<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_budget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/create_budget_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sw_background"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/create_budget_scroll_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_budget_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sw_header_height"
            android:background="@color/sw_background"
            android:paddingStart="@dimen/sw_space_12"
            android:paddingEnd="@dimen/sw_space_16">

            <ImageButton
                android:id="@+id/btn_create_budget_back"
                android:layout_width="@dimen/sw_touch_target"
                android:layout_height="@dimen/sw_touch_target"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/action_back"
                android:padding="@dimen/sw_space_10"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/sw_text_primary" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_create_budget_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sw_space_8"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_budget_title"
                android:textColor="@color/sw_text_primary"
                android:textSize="@dimen/sw_text_size_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_create_budget_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/create_budget_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_budget_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/sw_space_16"
            android:paddingEnd="@dimen/sw_space_16">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_create_budget_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/create_budget_subtitle"
                android:textColor="@color/sw_text_secondary"
                android:textSize="@dimen/sw_text_size_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_create_budget_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sw_space_16"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_create_budget_subtitle"
                tools:itemCount="4"
                tools:listitem="@layout/item_create_budget_category" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_add_budget_category"
                android:layout_width="0dp"
                android:layout_height="@dimen/sw_create_budget_add_row_height"
                android:layout_marginTop="@dimen/sw_space_4"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/sw_surface"
                app:cardCornerRadius="@dimen/sw_corner_radius_20"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_create_budget_categories"
                app:rippleColor="@color/sw_primary_ripple"
                app:strokeColor="@color/sw_outline_primary_soft"
                app:strokeWidth="@dimen/sw_stroke_width">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/sw_space_14"
                    android:paddingEnd="@dimen/sw_space_16">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/add_category_icon_container"
                        android:layout_width="@dimen/sw_icon_container_size_48"
                        android:layout_height="@dimen/sw_icon_container_size_48"
                        app:cardBackgroundColor="@color/sw_surface_primary_soft"
                        app:cardCornerRadius="@dimen/sw_corner_radius_14"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/sw_outline_primary_soft"
                        app:strokeWidth="@dimen/sw_stroke_width">

                        <ImageView
                            android:layout_width="@dimen/sw_icon_size_26"
                            android:layout_height="@dimen/sw_icon_size_26"
                            android:layout_gravity="center"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_add_expense"
                            app:tint="@color/sw_primary_action" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_add_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sw_space_16"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/add_category"
                        android:textColor="@color/sw_primary_action"
                        android:textSize="@dimen/sw_text_size_16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/add_category_icon_container"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/create_budget_summary_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sw_space_2"
                android:layout_marginTop="@dimen/sw_space_20"
                android:layout_marginEnd="@dimen/sw_space_2"
                app:cardBackgroundColor="@color/sw_primary"
                app:cardCornerRadius="@dimen/sw_corner_radius_24"
                app:cardElevation="@dimen/sw_card_elevation"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_budget_category"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/sw_space_20"
                    android:paddingTop="@dimen/sw_space_20"
                    android:paddingEnd="@dimen/sw_space_20"
                    android:paddingBottom="@dimen/sw_space_20">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_create_budget_summary_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/budget_summary_title"
                        android:textColor="@color/sw_on_primary"
                        android:textSize="@dimen/sw_text_size_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_create_budget_total_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw_space_18"
                        android:text="@string/total_budget_label"
                        android:textColor="@color/sw_on_primary_85"
                        android:textSize="@dimen/sw_text_size_15"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_create_budget_summary_title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_create_budget_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sw_space_4"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/amount_rupee_39000"
                        android:textColor="@color/sw_on_primary"
                        android:textSize="@dimen/sw_text_size_40"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_create_budget_total_label" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue_budget"
                android:layout_width="0dp"
                android:layout_height="@dimen/sw_button_height_large"
                android:layout_marginStart="@dimen/sw_space_2"
                android:layout_marginTop="@dimen/sw_space_24"
                android:layout_marginEnd="@dimen/sw_space_2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/action_continue"
                android:textAllCaps="false"
                android:textColor="@color/sw_on_primary"
                android:textSize="@dimen/sw_text_size_16"
                app:backgroundTint="@color/sw_primary_dark"
                app:cornerRadius="@dimen/sw_corner_radius_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_budget_summary_card" />

            <Space
                android:id="@+id/create_budget_bottom_space"
                android:layout_width="0dp"
                android:layout_height="@dimen/sw_space_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_continue_budget" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>